# client

./: Cargo.toml
src/: main.rs
src/app/: camera.rs  errors.rs  gizmo.rs  mod.rs  setup.rs  state.rs  tab_viewer.rs  types.rs  ui.rs  window.rs
src/app/camera/: mod.rs
src/app/events/: mod.rs
src/app/ui/: app.rs  bottom_bar.rs  content.rs  gizmo.rs  menu_bar.rs  mod.rs  state.rs  tab_viewer.rs  traits.rs
src/models/: session.rs
src/utils/: error.rs  state.rs
src/views/: connect.rs
src/window/: error.rs  mod.rs  settings.rs
