[package]
name = "archipel-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_egui = "0.21"
egui_dock = "0.6"
winit = "0.28"
image = "*"
thiserror = "1"
log = "0"
egui-gizmo = "0.11"
anyhow = "1"
